@@ -1,3 +1,8 @@
+2025-01-25 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* index.php:
+	  Announce SDCC 4.5.0 RC3.
+
 2025-01-15 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* index.php:
